--- a/modules/site/public/css/style.css
+++ b/modules/site/public/css/style.css
@@ -8707,7 +8707,7 @@ h1, h2, h3, h4, h5,
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease; }
   .services .d-block {
-    margin-bottom: 20px; }
+    margin-bottom: 60px; }
   .services .icon {
     line-height: 1.3;
     position: relative;
@@ -9053,7 +9053,7 @@ textarea.form-control {
   font-size: 24px; }
 
 .ftco-section {
-  padding: 7em 0;
+  padding-top: 7em;
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
